# ice_breaker

./: LangChain.ipynb  README.md  pyproject.toml
src/ice_breaker/: __init__.py  __main__.py
src/ice_breaker/agents/: linkedin_lookup_agent.py
src/ice_breaker/third_parties/: linkedin.py
