[project]
name = "ice-breaker"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain>=0.2.14",
    "langchain-anthropic>=0.1.23",
    "langchainhub>=0.1.21",
    "langchain-community>=0.2.12",
    "langchain-ollama>=0.1.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
ice-breaker = 'ice_breaker:main'

[tool.rye.scripts]
dev = { cmd = "python src/ice_breaker", env-file = ".env" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ice_breaker"]
